# slock

./: .gitignore  meson.build  slock  slock.c
.cache/clangd/index/: arg.h.F004CE6639544FE9.idx  config.h.3F813328E13575FC.idx  explicit_bzero.c.B05E5A090BEE61E0.idx  slock.c.7954116D7D261C44.idx  util.h.B0EDCE5BAF9AEAFE.idx
